# Criptext-Email-React-Client

./: .gitignore  README.md
db_interface/: linux_setup.sh  macos_setup.sh  windows_setup.ps1
db_interface/src/: binding.gyp  dbUtils.cpp
db_interface/src/axolotl/: Account.cpp  Account.h  Email.cpp  Email.h  IdentityKey.cpp  IdentityKey.h  PreKey.cpp  PreKey.h  SessionRecord.cpp  SessionRecord.h  SignedPreKey.cpp  SignedPreKey.h
db_interface/src/http/: http.cpp  http.h
electron_app/: electron-starter.js  package.json
electron_app/installerResources/: installerTypes.json
electron_app/src/: DBManager.js  ExternalEmailParser.js  aliceManager.js  clientManager.js  dbExporter.js  globalManager.js  models.js  recovery.key  recoverykey
electron_app/src/__integrations__/: Account.integration.js  Contact.integration.js  DbExporter.integration.js  Email.integration.js  Feeditem.integration.js  File.integration.js  Label.integration.js
electron_app/src/backup/: FileUtils.js
electron_app/src/database/: DBEexporter.js  DBEmanager.js  DBEmodel.js  DBManager.js  dbExporter.js  models.js
electron_app/src/filescript/: checker.js  decrypter.js  handler.js  helpers.js
electron_app/src/importer/: emailsImporter.js  imap.js  imapImporter.js  index.js  mailParser.js  mboxParser.js
electron_app/src/ipc/: backup.js  database.js  importer.js  login.js  mailbox.js  manager.js  pin.js  utils.js
electron_app/src/lang/: de.json  en.json  es.json  fr.json  ru.json
electron_app/src/migrations/: 20190816144157_addColumnsRecordLength.js  20191014110726_addColumnsRecordLength.js
electron_app/src/utils/: FileUtils.js  PrintUtils.js  SourceUtils.js  dataBaseUtils.js  stringUtils.js
electron_app/src/windows/: composer.js  events.js  index.js  pin.js
email_composer/: package.json
email_composer/src/components/: TagRecipient.js
email_composer/src/containers/: Composer.js
email_composer/src/lang/: de.json  en.json  es.json  fr.json  ru.json
email_composer/src/libs/: signal.js
email_composer/src/utils/: EmailUtils.js  ipc.js
email_loading/: package.json
email_loading/src/components/: LinkNewDeviceWrapper.js  LoadingWrapper.js  Panel.js
email_loading/src/lang/: de.json  en.json  es.json  fr.json  ru.json
email_loading/src/libs/: signal.js
email_loading/src/utils/: electronInterface.js  ipc.js
email_login/: package.json
email_login/src/components/: Login.js  LoginWrapper.js  PanelWrapper.js  SignInPasswordWrapper.js
email_login/src/lang/: de.json  en.json  es.json  fr.json  ru.json
email_login/src/utils/: ipc.js
email_mailbox/: package.json
email_mailbox/public/: emails.json
email_mailbox/src/actions/: emails.js  feeditems.js  index.js  labels.js  threads.js  (+2 more)
email_pin/: package.json
signal_interface/: CMakeLists.txt  Readme.md  binding.gyp  binding.template.gyp  build-windows.ps1  build-windows.sh  linux_binding.gyp  macos_binding.gyp  main.cpp  toolchain-minwg64.cmake  windows_binding.gyp  windows_install_deps.ps1
signal_interface/build_scripts/windows/: CMakeCache.txt  CMakeLists.txt  binding.gyp  install_deps.ps1
signal_interface/installation/linux/: CMakeLists.txt  linux_binding.gyp
signal_interface/installation/macos/: CMakeLists-macos.txt
signal_interface/installation/windows/: windows_binding.gyp
signal_interface/src/crypto/: crypto.c  signal.cpp  signal.h  store.cpp  store.h
signal_interface/src/crypto/protocol_store/: IdentityKeyStore.cpp  IdentityKeyStore.h  PreKeyStore.cpp  PreKeyStore.h  SessionStore.cpp  SessionStore.h  SignedPreKeyStore.cpp  SignedPreKeyStore.h  decode_utils.cpp
signal_interface/src/helpers/: utf8.h
signal_interface/src/http/: http.cpp  http.h
signal_interface/src/http/handlers/: decrypt.cpp  decrypt.h  encrypt.cpp  encrypt.h  helpers.h  keyBundle.cpp  keyBundle.h
(+74 files in other folders)
